# research-article-template

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ASTRO_MIGRATION.md  AUDIT-2026.md  CHANGELOG.md  CLAUDE.md  COLLABORATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTION_IMPORT.md  README.md  ROADMAP-2026.md  entrypoint.sh  nginx.conf  package-lock.json  package.json
.devcontainer/: devcontainer.json
app/: .gitignore  astro.config.mjs  package-lock.json  package.json  webpack.config.js
app/.astro/: settings.json
app/public/: data  hf-space-parent-listener.js  robots.txt
app/scripts/: EXPORT-PDF-BOOK.md  INTEGRATION-COMPLETE.md  README-PDF-BOOK.md  README-TRACKIO.md  demo-trackio.py  export-latex.mjs  export-pdf-book-simple.mjs  export-pdf-book.mjs  export-pdf.mjs  extract-used-assets.mjs  find_duplicated_spaces.py  generate-trackio-data.mjs  generate_ablation_data.py  generate_ablation_data_correct.py  generate_ablation_data_final.py  generate_ablation_data_fixed.py  jitter-trackio-data.mjs  log-attention-all-runs.py  log-attention-loss-only.py  log-loss-data.py  log-spike-complete.py  log-spike-different-projects.py  log-spike-exact-names.py  log-spike-same-project.py  (+9 more)
app/src/content/embeds/plotly/: bar.py  heatmap.py  line.py  pyproject.toml
create-research-article/: cli.js  package.json
old/: README.md  package.json
python/: convert.py  convert_to_md.py
scripts/: release.mjs  setup-collaboration.sh
tools/duplicated-spaces/: README.md  pyproject.toml
tools/duplicated-spaces/duplicated_spaces/: __init__.py  cli.py  finder.py
(+468 files in other folders)
